# TelegramChatBotAI

./: README.md  advices.yaml  api_advices.py  api_currency.py  currencies.yaml  main.py  model_training.py  model_training__sklearn.py  pyproject.toml  requirements.txt  text_normalizer.py
api/: api_advices.py  api_currency.py  api_google_search.py
dialog_data/: dialog_talk_agent.xlsx  test_data.xlsx
utils/: context_loader.py  text_normalizer.py
